# vector_image_editor

./: CMakeLists.txt  README.txt  run.bat
src/: Common.h  area.c  area.h  command.c  command.h  drawing.c  drawing.h  id.c  id.h  main.c  main.h  pixel.c  pixel.h  shapes.c  shapes.h  states.c  states.h
src/utils/: math.c  math.h  print_utils.c  print_utils.h  scan_utils.c  scan_utils.h  strings.c  strings.h
